# pupforth

./: .gitignore  .pupforth-history.txt  ideas.txt  mem.py  pyproject.toml  readme.rst  test.f
pupforth/: cli.py  exceptions.py  lib.f  main.py  primitives.py  readme.rst  stack.py  utils.py  words.py
pupforth.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
