[project]
name = "pupforth"
version = "1.0.0"
description = "Simple Forth interpreter with big dreams and hopes."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "prompt-toolkit",
]

[project.scripts]
pupforth = "pupforth.cli:cli"

#[build-system]
#requires = ["flit_core<4"]
#build-backend = "flit_core.buildapi"
#
#[tool.flit.module]
#name = "inout"